--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -129,7 +129,9 @@
 - 1. 자동순번 : 데이터베이스에서 자동으로 증가하는 순번으로, 주로 숫자 형식
   2. 단일키 : 하나의 속성을 기본 키로 사용
   3. 복합키 : 두 개 이상의 속성 또는 열을 결합하여 기본 키로 사용
+</br>
 
+### < Customers >
 
 ```mermaid
 erDiagram
@@ -157,6 +159,98 @@ erDiagram
     }
 
 ```
+</br>
 
+### < Orders >
+- 주문 버튼을 클릭하면 Cart에서 선택된 상품만 OrderItems로 옮겨짐. 따라서 Orders와 Cart는 직접적인 연관은 없음.
+```mermaid
+erDiagram
+    Orders ||--o| ShippingAddress : uses
+    Orders ||--o{ OrderItems : contains
+
+    Orders {
+        int id PK
+    }
+
+    ShippingAddress {
+        int id PK
+        int orderId FK
+    }
+
+    OrderItems {
+        int id PK
+        int orderId FK
+    }
+
+    Cart {
+        int id PK
+    }
+```
+</br>
+
+### < Products >
+```mermaid
+erDiagram
+    Products ||--o{ Cart : listed_in
+    Products ||--o{ OrderItems : has
+
+    Products {
+        int id PK
+    }
+
+    OrderItems {
+        int id PK
+        int productId FK
+    }
+
+    Cart {
+        int id PK
+        int productId FK
+    }
+```
+</br>
+
+### < 결과 >
+```mermaid
+erDiagram
+    Customers ||--o{ Orders : places
+    Customers ||--o{ ShippingAddress : has
+    Customers ||--o{ Cart : owns
+    Orders ||--o| ShippingAddress : uses
+    Orders ||--o{ OrderItems : contains
+    Products ||--o{ Cart : listed_in
+    Products ||--o{ OrderItems : has
+
+    Customers {
+        int id PK
+    }
+
+    Orders {
+        int id PK
+        int customerId FK
+        int shippingAddressId FK
+    }
+
+    ShippingAddress {
+        int id PK
+        int customerId FK
+    }
+
+    Cart {
+        int id PK
+        int customerId FK
+        int productId FK
+    }
+
+    OrderItems {
+        int id PK
+        int orderId FK
+        int productId FK
+    }
+
+    Products {
+        int id PK
+    }
+```
 
 ### 프로세스 (6/6) : 쇼핑몰 주문관리 구축하기 #3
