--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -258,3 +258,45 @@ erDiagram
 ---
 
 ### 프로세스 (6/6) : 쇼핑몰 주문관리 구축하기 #3
+</br>
+
+### < 엔티티 구성 >
+</br>
+
+### < Customers 테이블 >
+<img width="445" height="265" alt="image" src="https://github.com/user-attachments/assets/8b0735b0-5a69-418a-ae5c-926d71d156a7" />
+</br>
+</br>
+</br>
+
+### < Order 테이블 >
+<img width="518" height="450" alt="image" src="https://github.com/user-attachments/assets/98ec8326-2aea-4932-83c2-28c5c67d65ad" />
+</br>
+</br>
+</br>
+
+### < ShippingAddress 테이블 >
+<img width="455" height="376" alt="image" src="https://github.com/user-attachments/assets/f97cc4b9-dd95-4953-a660-bb3f7196c1cf" />
+</br>
+</br>
+</br>
+
+### < Cart 테이블 >
+<img width="516" height="410" alt="image" src="https://github.com/user-attachments/assets/c1e1ad1f-5d79-4682-8b2e-d80720a30fb6" />
+</br>
+</br>
+</br>
+
+### < OrderItems 테이블 >
+<img width="422" height="226" alt="image" src="https://github.com/user-attachments/assets/6ad1edde-4bce-4275-beb9-0d4d7355ca23" />
+</br>
+</br>
+</br>
+
+### < Products 테이블 >
+<img width="448" height="300" alt="image" src="https://github.com/user-attachments/assets/5442fe73-3c37-44a4-913b-332c94a1008c" />
+</br>
+</br>
+</br>
+
+### < orderStatus - 코드로 관리하는 방법 >
