--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -300,3 +300,11 @@ erDiagram
 </br>
 
 ### < orderStatus - 코드로 관리하는 방법 >
+- 장점 :
+- 1. 데이터 일관성 : 숫자나 상수를 사용하면 데이터의 일관성을 더 잘 유지할 수 있음.
+  2. 데이터 크기 절약 : 문자열보다는 숫자나 상수를 사용하는 것이 데이터베이스 공간을 더 효율적으로 사용할 수 있음.
+  3. 빠른 검색 속도 : 코드를 사용하면 데이터 조회 속도가 일반적으로 더 빠름.
+  4. 국제화 용이 : 상태를 코드로 관리하면 다국어 환경에서의 변환이 쉬움. 예를 들어, '1'을 "배송중", "Shipping", "出荷中" 등으로 쉽게 매핑할 수 있음.
+- 단점 :
+- 1. 가독성 저하 : 코드 자체로는 의미를 바로 알기 어려워, 주석이나 문서가 필요.
+  2. 유지보수 비용: 상태가 추가되거나 변경될 때마다, 해당 코드를 이해하고 있는 개발자가 수정해야 하므로 유지보수 비용이 발생할 수 있음.
