--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -308,3 +308,14 @@ erDiagram
 - 단점 :
 - 1. 가독성 저하 : 코드 자체로는 의미를 바로 알기 어려워, 주석이나 문서가 필요.
   2. 유지보수 비용: 상태가 추가되거나 변경될 때마다, 해당 코드를 이해하고 있는 개발자가 수정해야 하므로 유지보수 비용이 발생할 수 있음.
+</br>
+
+- 추가 : 대응되는 테이블
+</br>
+
+<img width="155" height="229" alt="image" src="https://github.com/user-attachments/assets/48226769-3d13-4771-bb61-5bfb02b27fee" />
+- 이런 식으로 'OrderStatus' 테이블을 따로 만들고, 해당 테이블의 '코드'와 '설명'을 매핑 가능. 이렇게 하면 'Orders' 테이블의 'orderStatus' 필드는 이 테이블의 '코드'를 참조할 수 있음.
+
+</br>
+
+### < orderStatus - 문자열로 관리하는 방법 >
