--- a/설계/1. 프로세스.md
+++ b/설계/1. 프로세스.md
@@ -317,5 +317,59 @@ erDiagram
 - 이런 식으로 'OrderStatus' 테이블을 따로 만들고, 해당 테이블의 '코드'와 '설명'을 매핑 가능. 이렇게 하면 'Orders' 테이블의 'orderStatus' 필드는 이 테이블의 '코드'를 참조할 수 있음.
 
 </br>
+</br>
 
 ### < orderStatus - 문자열로 관리하는 방법 >
+- 장점 :
+- 1. 가독성: 상태가 무엇인지 바로 알 수 있음.
+  2. 직관적: 코드를 별도로 확인할 필요가 없으므로, 비개발자나 새로운 개발자에게도 직관적.
+- 단점 :
+- 1. 데이터 일관성: 문자열이므로 오타나 다른 문제로 인해 데이터 일관성을 잃을 위험이 있음.
+  2. 데이터 크기 증가: 문자열을 사용하면 데이터베이스에 더 많은 공간이 필요.
+  3. 검색 속도 저하: 문자열 검색은 일반적으로 코드 검색보다 느림.
+  4. 국제화 어려움: 다양한 언어로의 변환이 어려움. 예를 들어, "배송중"을 다른 언어로 번역해야 할 경우 문제가 될 수 있음.
+
+</br>
+</br>
+
+### < 캐시 적립 - CashBackHistory 테이블 >
+<img width="517" height="301" alt="image" src="https://github.com/user-attachments/assets/0db4d2e0-3197-414c-9320-c3208ee33da6" />
+</br>
+</br>
+</br>
+
+### < 캐시 적립 - Customers 테이블 반정규화 >
+- cashBack 필드가 Customers 테이블에 추가됨으로써, 고객 정보를 조회할 때마다 CashBackHistory 테이블을 참조하여 캐시백 금액을 계산할 필요가 없어짐. 이는 특히 빈번한 조회가 발생하는 서비스에서 성능 향상을 가져올 수 있음.
+<img width="452" height="301" alt="image" src="https://github.com/user-attachments/assets/52456041-7629-4f31-889c-b72aa7f80b72" />
+</br>
+</br>
+</br>
+
+- 장점 :
+- 1. 쿼리 성능이 향상될 수 있음.
+  2. 캐시백 누적 금액을 빠르게 확인할 수 있음.
+  3. 서비스 로직이 간단해질 수 있음.
+- 단점 :
+- 1. CashBackHistory 테이블과 Customers 테이블 사이의 데이터 무결성을 유지하기 어려움.
+  2. 캐시백이 적립되거나 사용될 때, 두 테이블을 모두 업데이트 해야 함.
+  3. 데이터가 중복되므로 저장 공간이 더 필요할 수 있음.
+</br>
+
+* cashBack는 CashBackHistory의 데이터를 계산해서 사용할 수 있으나, 이 방법은 실시간으로 누적 금액을 계산해야 하므로 성능 저하를 가져올 수 있음. 또한, 누적 금액이 자주 변경될 경우 계산 로직이 복잡해질 수 있음. 따라서 반정규화를 통해 이러한 단점을 상쇄할 수 있음. 하지만 이것이 반드시 좋은 방법이라고 할 수 없으며, 시스템의 특성과 요구사항에 따라 적절히 판단해야 함.
+
+</br>
+</br>
+
+### < 인덱스 작성 시 주의사항 >
+- 선택도(Selectivity) : 선택도가 높은 컬럼은 인덱스로 좋은 후보.
+- 읽기와 쓰기의 비율 : 읽기가 빈번하다면 인덱스 추가가 유리.
+- 인덱스의 크기 : 컬럼의 크기가 클 경우 인덱스 관리 비용이 증가.
+- 복합 인덱스 : 컬럼의 순서가 중요. (선택도가 높은 컬럼을 먼저)
+- 정렬 순서: 오름차순, 내림차순도 쿼리 성능에 영향을 줌.
+- 과도한 인덱스: 쓰기 성능 저하와 디스크 공간 문제가 발생할 수 있음.
+- 인덱스 갱신: 데이터 변경 시 인덱스도 갱신되어 성능에 부하가 있을 수 있음.
+- 비트맵 인덱스: 낮은 카디널리티 컬럼의 경우 비트맵 인덱스 등의 특별한 인덱스 유형을 고려할 수 있음. (주로 읽기 작업이 많은 OLAP 환경에서 유용)
+- 데이터 양: 데이터 양이 적더라도 특정 쿼리 성능이 중요하다면 인덱스를 고려.
+- 변경이 많은 필드: 데이터가 자주 변경되면 인덱스 오버헤드가 발생할 수 있음.
+- 클러스터링된 인덱스: 변경이 적고 검색이 많은 필드에 대해서는 클러스터링된 인덱스를 고려.
+- 배치 작업: 변경이 주로 되며 배치 작업이 많은 테이블의 경우 인덱스를 피함. (배치 작업 전후로 인덱스를 재구성하는 전략을 고려할 수 있음)
