--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -7,4 +7,21 @@
 - JAVASCRIPT: 동적 기능 구현
 
 ```html
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8"/>
+    <title>
+        JavaScript Language Basics
+    </title>
+</head>
+
+<body>
+
+<!-- Page Conetent -->
+    <script>
+    alert("Hello World");
+    </script>
+</body>
+</html>
 ```
