--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -28,7 +28,11 @@
 </br>
 </br>
 
-- 내가 입력한 값 화면에서 확인
 ```java
 alert("Hello world");   // 활성화 되어 있는 코드
 ```
+- 내가 입력한 값 화면에서 확인
+</br>
+
+- // : 주석처리
+- /* 내용 */ : 여러 줄 주석처리
