--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -5,6 +5,11 @@
 - HTML : 웹페이지 골격
 - CSS : 웹페이지 스타일
 - JAVASCRIPT: 동적 기능 구현
+</br>
+
+- 태그는 <열림>과 </닫힘> 형태로 작성됨
+- 예 : ```<p>안녕하세요</p>```
+
 
 ```html
 <!DOCTYPE html>
