--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -9,9 +9,10 @@
 
 - 태그는 <열림>과 </닫힘> 형태로 작성됨
 - 예 : ```<p>안녕하세요</p>```
-- ```<br />, <img />, <meta />```
-- 열림과 닫힘을 한 줄로 표현 (내용 없음)
-
+- ```<br />, <img />, <meta />``` : 열림과 닫힘을 한 줄로 표현 (내용 없음)
+- html안에 head, body 태그가 있음
+- <body> 안에는 Header(H), Content(C), Footer(F) 영역으로 나뉨
+- Script가 맨 아래에 위치
 
 ```html
 <!DOCTYPE html>
