--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -2,6 +2,7 @@
 - FIORI -> ABAP -> RAP 순서로 배움
 </br>
 
+### 1. 웹 기초 구조 (HTML / CSS / JavaScript)
 - HTML : 웹페이지 골격
 - CSS : 웹페이지 스타일
 - JAVASCRIPT: 동적 기능 구현
