--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -42,12 +42,17 @@
 </br>
 
 ### 2. 기본 출력 / 입력 함수
-
-```java
-alert("Hello world");   // 활성화 되어 있는 코드
-```
-- 내가 입력한 값 화면에서 확인
 </br>
 
-- // : 주석처리
-- /* 내용 */ : 여러 줄 주석처리
+- 메시지 박스를 띄워 내용을 알림창으로 출력
+- 사용자가 확인 버튼을 눌러야 넘어감
+```java
+alert("Hello world");  
+```
+</br>
+
+- 주석처리
+```java
+// 한 줄 주석
+/* 여러 줄 주석 */
+```
