--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -59,7 +59,7 @@ alert("Hello world");
 </br>
 
 ### < 입력 관련 함수 >
-1) prompt
+### 1) prompt
 - 사용자에게 값을 입력받음
 - 입력창이 팝업으로 뜨고, 사용자가 값을 입력하면 그 결과를 문자열로 반환
 - 123 넣어도 문자열로 123 나옴. 계산하고 싶을 때는 숫자로 변환해야 함.
