--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -76,4 +76,50 @@ alert("안녕하세요, " + name + "님!");
 let city = prompt("사는 도시를 입력하세요", "서울");
 console.log(city);
 ```
+</br>
 
+### 2) confirm
+- 사용자에게 확인/취소를 선택하게 하는 팝업창을 띄우는 함수
+- 선택 결과를 true(확인)/false(취소)로 반환
+```java
+confirm("메시지");
+```
+```java
+let result = confirm("정말 삭제하시겠습니까?");        // 확인 클릭 → true, 취소 클릭 → false
+console.log(result);
+```
+</br>
+</br>
+
+---
+</br>
+
+### 3. 변수
+- 변수: 값을 저장하기 위한 메모리 공간의 이름
+</br>
+
+### 1) var
+- 가장 기본적인 변수 선언 키워드. 오래된 코드에서 볼 수 있음.
+- 중복 선언 가능. 재할당 가능. 덮어쓰기 문제 발생할 수 있음.
+```java
+var 변수명;
+var 변수명 = 값;
+```
+```java
+var result;        // 선언
+result = "A";      // 값 할당
+var result = "B";  // 재선언 (가능)
+console.log(result); // "B" 출력
+```
+- scope는 함수 단위
+```java
+if (true) {
+  var x = 10;
+}
+console.log(x);     // 10 - 블록 밖에서도 접근 가능
+```
+</br>
+
+### 2) let
+- var의 단점을 보완해 새로 추가된 변수 선언 방식.
+### 3) const
