--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -100,26 +100,36 @@ console.log(result);
 
 ### 1) var
 - 가장 기본적인 변수 선언 키워드. 오래된 코드에서 볼 수 있음.
-- 중복 선언 가능. 재할당 가능. 덮어쓰기 문제 발생할 수 있음.
 ```java
 var 변수명;
 var 변수명 = 값;
 ```
+- 중복 선언 가능. 재할당 가능. 덮어쓰기 문제 발생할 수 있음.
 ```java
 var result;        // 선언
 result = "A";      // 값 할당
 var result = "B";  // 재선언 (가능)
 console.log(result); // "B" 출력
 ```
-- scope는 함수 단위
+- scope는 함수 단위. {} 블록 구분 X.
 ```java
 if (true) {
   var x = 10;
 }
-console.log(x);     // 10 - 블록 밖에서도 접근 가능
+console.log(x);     // 10 : 블록 밖에서도 접근 가능
 ```
 </br>
 
 ### 2) let
 - var의 단점을 보완해 새로 추가된 변수 선언 방식.
+```java
+let 변수명;
+let 변수명 = 값;
+```
+- 중복 선언 불가능. 재할당 가능.
+```java
+let name = "철수";
+let name = "영희";     // ❌ 에러
+```
+
 ### 3) const
