--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -111,7 +111,7 @@ result = "A";      // 값 할당
 var result = "B";  // 재선언 (가능)
 console.log(result); // "B" 출력
 ```
-- scope는 함수 단위. {} 블록 구분 X.
+- 스코프(유효 범위)는 함수 단위. {} 블록 구분 X.
 ```java
 if (true) {
   var x = 10;
@@ -130,6 +130,17 @@ let 변수명 = 값;
 ```java
 let name = "철수";
 let name = "영희";     // ❌ 에러
+
+let age = 20;
+age = 25;             // 가능
+```
+- 스코프(유효 범위)는 블록 단위
+```java
+if (true) {
+  let a = 10;
+  console.log(a);     // 10
+}
+console.log(a);       // ❌ 에러 (블록 밖에서 접근 불가)
 ```
 
 ### 3) const
