--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -142,5 +142,40 @@ if (true) {
 }
 console.log(a);       // ❌ 에러 (블록 밖에서 접근 불가)
 ```
+</br>
 
 ### 3) const
+- 한 번 정해진 값이 절대 바뀌지 않도록 하는 변수
+- 상수를 선언할 때 사용하며, 선언과 동시에 반드시 값을 할당해야 함
+```java
+const 변수명 = 값;
+```
+- 재선언 불가능, 재할당 불가능
+```java
+const companyCode = "HQ00";
+console.log(companyCode);         // "HQ00"
+
+companyCode = "BR01";             // ❌ 에러 (상수 값 변경 불가)
+```
+- let처럼 스코프(유효 범위)는 블록 단위
+- 선언할 때 반드시 초기값이 필요함
+```java
+const x;         // ❌ 에러 (초기값 없이 선언 불가)
+```
+</br>
+
+- 전역 변수: 프로그램 전체에서 접근 가능한 변수
+```java
+var a = 10;
+function test() {
+  console.log(a);         // 10 (전역 접근 가능)
+}
+```
+- 지역 변수: 특정 블록 {} 안에서만 접근 가능한 변수
+```java
+function test() {
+  let b = 20;
+  console.log(b);         // 20
+}
+console.log(b);           // ❌ 에러 (지역 변수는 블록 밖에서 접근 불가)
+```
