--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -166,14 +166,16 @@ const x;         // ❌ 에러 (초기값 없이 선언 불가)
 </br>
 </br>
 
-- 전역 변수: 프로그램 전체에서 접근 가능한 변수
+### 1) 전역 변수
+- 프로그램 전체에서 접근 가능한 변수
 ```java
 var a = 10;
 function test() {
   console.log(a);         // 10 (전역 접근 가능)
 }
 ```
-- 지역 변수: 특정 블록 {} 안에서만 접근 가능한 변수
+### 2) 지역 변수
+- 특정 블록 {} 안에서만 접근 가능한 변수
 ```java
 function test() {
   let b = 20;
