--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -185,3 +185,6 @@ function test() {
 }
 console.log(b);           // ❌ 에러 (지역 변수는 블록 밖에서 접근 불가)
 ```
+
+* "use strict"
+- "use strict"를 코드 맨 위에 쓰면 엄격 모드(Strict Mode)가 활성화
