--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -198,4 +198,19 @@ x = 10;             // ❌ 에러 (var/let/const 없이 선언 불가)
 ---
 </br>
 
-### 4. 자료형
+### 4. 조건문
+</br>
+
+### <자료형>
+```java
+let vString = "문자열";	// “ 또는 ‘ 안에 들어감
+let vNumber = 123;	// 숫자 타입
+let vBoolean = false;	// true(1) 또는 false(0)
+let vNull = null;		// 빈 값(이라는 걸 할당한 상태)
+let vUndefined = undefined;	// 값을 할당하지 않음
+
+console.log(vString, vNumber, vBoolean, vNull, vUndefined);
+```
+- "문자열" 123 false null undefined 콘솔 창에 출력
+</br>
+
