--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -199,9 +199,8 @@ x = 10;             // ❌ 에러 (var/let/const 없이 선언 불가)
 </br>
 
 ### 4. 조건문
-</br>
 
-### <자료형>
+### < 자료형 >
 ```java
 let vString = "문자열";	// “ 또는 ‘ 안에 들어감
 let vNumber = 123;	// 숫자 타입
@@ -214,3 +213,12 @@ console.log(vString, vNumber, vBoolean, vNull, vUndefined);
 - "문자열" 123 false null undefined 콘솔 창에 출력
 </br>
 
+### 조건문이란?
+- Boolean(불린): true와 false
+
+### < if문 >
+if (조건) {
+  // 참일 때 실행
+} else {
+  // 거짓일 때 실행
+}
