--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -213,12 +213,63 @@ console.log(vString, vNumber, vBoolean, vNull, vUndefined);
 - "문자열" 123 false null undefined 콘솔 창에 출력
 </br>
 
-### 조건문이란?
+### < 조건문이란? >
 - Boolean(불린): true와 false
-
-### < if문 >
+```java
 if (조건) {
-  // 참일 때 실행
+                  // 참일 때 실행
 } else {
-  // 거짓일 때 실행
+                  // 거짓일 때 실행
 }
+```
+```java
+if(true){
+    alert('result : true');        // result : true 출력
+}
+
+if(false){
+    alert('result : true');        // 아무것도 출력되지 않음
+}
+```
+</br>
+
+### < 내부적으로 false 값을 갖는 것들 >
+- 0, false, “”(빈 문자열), null, undefined
+```java
+if(!''){
+    alert('빈 문자열')    // `빈 문자열` 출력
+}
+if(!undefined){
+    alert('undefined');    // `undefined` 출력
+}
+var a;
+if(!a){
+    alert('값이 할당되지 않은 변수');     // `값이 할당되지 않은 변수` 출력
+}
+if(!null){
+    alert('null');    // `null` 출력
+}
+if(!NaN){
+    alert('NaN');    // `NaN` 출력
+}
+```
+</br>
+</br>
+
+---
+</br>
+
+### 5. 배열
+- 여러 개의 데이터를 하나의 변수에 저장하기 위한 것
+- 각각의 데이터를 원소라고 함
+- 인덱스는 0부터 시작
+```java
+let arr = [];  
+let arr2 = ["값1", 1000, false, null];
+```
+- 값 변경
+```java
+arr2[0] = "안녕하세요";
+arr2[5] = "반가워요";
+console.log(arr2[5]);         // "반가워요" 출력
+```
