--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -274,3 +274,22 @@ arr2[0] = "안녕하세요";
 arr2[5] = "반가워요";
 console.log(arr2[5]);         // "반가워요" 출력
 ```
+</br>
+
+### < 배열에 원소 추가하기 >
+### push
+- 배열의 끝에 한 개 이상의 원소를 추가
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];        // a, b, c, d, e, f 출력 (한 번에)
+li.push('f');
+alert(li);
+```
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];        // a, b, c, d, e, a, f 출력 (한 번에)
+li.push('a', 'f');
+alert(li);
+```
+</br>
+
+### concat
+- 두 개 이상의 배열을 합침
