--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -293,3 +293,77 @@ alert(li);
 
 ### concat
 - 두 개 이상의 배열을 합침
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];        // a, b, c, d, e, f, g 출력 (한 번에)
+li = li.concat(['f', 'g']);
+alert(li);
+```
+```java
+var arr1 = [1, 2];
+var arr2 = [3, 4];
+arr1=arr1.concat(arr2);        // 1, 2, 3, 4 출력 (한 번에)
+alert(arr1);
+```
+</br>
+
+### unshift
+- 배열의 시작점에 한 개 이상의 원소를 추가
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.unshift('z');
+alert(li);
+```
+- z, a, b, c, d, e 출력 (한 번에)
+
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.unshift('a', 'z');
+alert(li);
+```
+- a, z, a, b, c, d, e 출력 (한 번에)
+</br>
+
+### splice
+- `array.splice(startIndex, deleteCount, item1, item2, ...);`
+- startIndex: 변경을 시작할 배열 인덱스 (0부터 시작)
+- deleteCount: 삭제할 요소 개수 (0이면 삭제 안 함)
+- item1, item2, ...: 삭제 후 그 위치에 추가할 요소들 (생략 가능
+</br>
+
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.splice(2, 0, 'B');
+alert(li);
+```
+- a, b, B, c, d, e 출력 (삭제 요소 0, 인덱스 2부터 B 추가) (한 번에)
+
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.splice(2, 3, 'B', 'C');
+alert(li);
+```
+- a, b, B, C 출력 (삭제 요소 3, 인덱스 2부터 B, C 추가) (한 번에)
+</br>
+</br>
+
+```java
+var numbers = [1,2,3,4,5,6,7,8,9,10];
+alert(numbers.splice(2));                     // array, [3,4,5,6,7,8,9,10], 시작점 2부터 배열의 마지막 원소까지를 대상으로 한다.
+alert(numbers);                               // array, [1,2], 원본이 수정된다.
+```
+</br>
+</br>
+
+```java
+var numbers = [1,2,3,4,5,6,7,8,9,10];
+alert(numbers.splice(2, 4));             // array, [3,4,5,6]
+alert(numbers);                          // array, [1,2,7,8,9,10]
+```
+</br>
+</br>
+
+```java
+var numbers = [1,2,3,4,5,6,7,8,9,10];
+alert(numbers.splice(2, 4, 'three', 'four', 'five', 'six'));         // array, [3,4,5,6]
+alert(numbers);                                                      // array, [1,2,three,four,five,six,7,8,9,10]
+```
