--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -309,18 +309,15 @@ alert(arr1);
 ### unshift
 - 배열의 시작점에 한 개 이상의 원소를 추가
 ```java
-var li = ['a', 'b', 'c', 'd', 'e'];
+var li = ['a', 'b', 'c', 'd', 'e'];        // z, a, b, c, d, e 출력 (한 번에)
 li.unshift('z');
 alert(li);
 ```
-- z, a, b, c, d, e 출력 (한 번에)
-
 ```java
-var li = ['a', 'b', 'c', 'd', 'e'];
+var li = ['a', 'b', 'c', 'd', 'e'];        // a, z, a, b, c, d, e 출력 (한 번에)
 li.unshift('a', 'z');
 alert(li);
 ```
-- a, z, a, b, c, d, e 출력 (한 번에)
 </br>
 
 ### splice
@@ -331,18 +328,15 @@ alert(li);
 </br>
 
 ```java
-var li = ['a', 'b', 'c', 'd', 'e'];
+var li = ['a', 'b', 'c', 'd', 'e'];        // a, b, B, c, d, e 출력 (삭제 요소 0, 인덱스 2부터 B 추가) (한 번에)
 li.splice(2, 0, 'B');
 alert(li);
 ```
-- a, b, B, c, d, e 출력 (삭제 요소 0, 인덱스 2부터 B 추가) (한 번에)
-
 ```java
-var li = ['a', 'b', 'c', 'd', 'e'];
+var li = ['a', 'b', 'c', 'd', 'e'];        // a, b, B, C 출력 (삭제 요소 3, 인덱스 2부터 B, C 추가) (한 번에)
 li.splice(2, 3, 'B', 'C');
 alert(li);
 ```
-- a, b, B, C 출력 (삭제 요소 3, 인덱스 2부터 B, C 추가) (한 번에)
 </br>
 </br>
 
