--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -352,3 +352,55 @@ alert(numbers);                                                      // array, [
 ```
 </br>
 </br>
+
+### < join, split, length 함수 >
+### join
+- 배열의 원소들을 하나의 문자열로 연결할 때 사용
+- 구분자를 지정해서 각 요소 사이에 넣을 수 있음
+```java
+let arr = [5, 6, 7, 8];        
+let str = arr.join('-');        // 출력: "5-6-7-8"
+alert(str);
+
+let fruits = ['사과', '배', '포도'];
+alert(fruits.join(', '));             // 출력: "사과, 배, 포도"
+```
+</br>
+
+### split
+- 특정 구분자 기준으로 잘라서 배열로 변환
+```java
+let str = "5-6-7-8";
+let arr = str.split('-');        // 출력: 5,6,7,8 (배열 형태로 저장됨)
+alert(arr);
+
+let text = "JavaScript is fun";
+let result = text.split(' ');        // "JavaScript,is,fun"
+alert(result);  
+```
+</br>
+
+### length 속성
+- 배열의 길이(요소 개수)를 반환
+- 함수가 아니라 속성임 → 뒤에 괄호() 안 씀
+```java
+let arr = [5, 6, 7, 8];    // 인덱스: 0 ~ 3
+alert(arr.length);         // 출력: 4
+```
+</br>
+</br>
+
+---
+</br>
+
+### 6. 객체 & 내장객체
+- 이름(key)과 값(value)으로 이루어진 데이터 묶음
+```java
+let obj = {};      // 빈 객체
+let obj = { key: value, key2: value2 };
+
+let person = {
+  "name": "홍길동",
+  "age": 25
+};
+```
