--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -402,9 +402,18 @@ alert(arr.length);         // 출력: 4
 ```java
 let obj = {};      // 빈 객체
 let obj = { key: value, key2: value2 };
+```
 
+- obj.name 또는 obj["name"] 두 가지 방식 모두 가능
+```java
 let person = {
   "name": "홍길동",
   "age": 25
 };
+
+console.log(person.name);     // "홍길동"
+console.log(person.age);      // 25
+
+console.log(person["name"]);  // "홍길동"
+console.log(person["age"]);   // 25
 ```
