--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -417,3 +417,96 @@ console.log(person.age);      // 25
 console.log(person["name"]);  // "홍길동"
 console.log(person["age"]);   // 25
 ```
+- 객체 안에 다양한 자료형 저장 가능
+```java
+let obj = {
+  "name": "이름",
+  "age": 20,
+  "obj2": {},                   // 객체 안의 객체
+  "arr2": [],                   // 객체 안의 배열
+  "sleep": function() {         // 함수(메서드)
+    console.log("잠자기");
+  }
+};
+obj.sleep();                    // "잠자기"
+```
+</br>
+
+### < 내장 객체 >
+- 자바스크립트가 기본으로 제공하는 객체들로, 별도 선언 없이 바로 사용할 수 있음.
+- String (문자열 객체)
+- Number (숫자 객체)
+- Boolean (논리 객체)
+- Array (배열 객체)
+- Date (날짜 객체)
+- Math (수학 관련)
+- Object (모든 객체의 기본 형태)
+</br>
+
+### 원시 타입 vs 객체 타입
+- "문자" → 원시 타입(단순한 값)
+- new String("문자") → 객체 타입(String 객체)
+- 자바스크립트는 원시 타입도 내부적으로 자동으로 객체처럼 감싸서(wrapping) 처리함
+```java
+var str = "문자";
+console.log(str.length);     // 2
+```
+- "문자"가 자동으로 new String("문자")로 감싸져서 .length 사용이 가능
+</br>
+
+### Date 객체 (날짜 / 시간)
+- 날짜와 시간을 다룰 수 있는 자바스크립트 내장 객체
+```java
+let oDate = new Date();
+
+let year = oDate.getFullYear();
+let month = oDate.getMonth() + 1;
+let day = oDate.getDate();
+
+let today = year + "-" + month + "-" + day;        // 출력: 2025-10-21
+console.log(today);
+```
+</br>
+</br>
+
+---
+</br>
+
+### 7. 함수
+### 1) 기본 선언형
+- 가장 기본적인 함수 선언 방법
+```java
+function sayHello() {
+  console.log("안녕하세요!");
+}
+sayHello();   
+```
+</br>
+
+### 2) 함수 표현식
+- 함수도 변수처럼 저장할 수 있음.
+- 함수 이름이 없을 수도 있어서 익명 함수라고도 부름.
+```java
+var greet = function() {
+  console.log("반가워요!");
+};
+greet(); 
+```
+</br>
+
+### 3) 즉시 실행 함수
+- 함수를 정의하자마자 바로 실행하는 함수
+```java
+(function() {
+  console.log("바로 실행됨!");
+})();
+```
+</br>
+
+### 4) 화살표 함수
+```java
+const hi = () => {
+  console.log("Hi!");
+};
+hi(); 
+```
