--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -106,8 +106,7 @@ var 변수명 = 값;
 ```
 - 중복 선언 가능. 재할당 가능. 덮어쓰기 문제 발생할 수 있음.
 ```java
-var result;        // 선언
-result = "A";      // 값 할당
+var result = "A";      // 값 할당
 var result = "B";  // 재선언 (가능)
 console.log(result); // "B" 출력
 ```
