--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -444,7 +444,12 @@ obj.sleep();                    // "잠자기"
 </br>
 
 ### 원시 타입 vs 객체 타입
+1) 원시 타입
+- String, number, Boolean, null, undefined
 - "문자" → 원시 타입(단순한 값)
+
+2) 객체 타입
+- array [], object {}
 - new String("문자") → 객체 타입(String 객체)
 - 자바스크립트는 원시 타입도 내부적으로 자동으로 객체처럼 감싸서(wrapping) 처리함
 ```java
