--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -462,6 +462,7 @@ console.log(str.length);     // 2
 
 ### Date 객체 (날짜 / 시간)
 - 날짜와 시간을 다룰 수 있는 자바스크립트 내장 객체
+- String() : 문자열로 변환, Number() : 숫자로 변환
 ```java
 let oDate = new Date();
 
@@ -469,7 +470,7 @@ let year = oDate.getFullYear();
 let month = oDate.getMonth() + 1;
 let day = oDate.getDate();
 
-let today = year + "-" + month + "-" + day;        // 출력: 2025-10-21
+let today = String(year) + "-" + String(month) + "-" + String(day);        // 출력: 2025-10-21
 console.log(today);
 ```
 </br>
