--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -417,6 +417,10 @@ console.log(person.age);      // 25
 
 console.log(person["name"]);  // "홍길동"
 console.log(person["age"]);   // 25
+
+console.log(person.hi)    // undefined
+person.hi = "Hello";
+console.log(person.hi);    // "Hello"
 ```
 - 객체 안에 다양한 자료형 저장 가능
 ```java
