--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -467,6 +467,8 @@ console.log(str.length);     // 2
 ### Date 객체 (날짜 / 시간)
 - 날짜와 시간을 다룰 수 있는 자바스크립트 내장 객체
 - String() : 문자열로 변환, Number() : 숫자로 변환
+- 숫자 + 문자열 : 숫자를 문자열로 변환해버림
+- `${}` : 안의 값을 문자열로 변경해 줌
 ```java
 let oDate = new Date();
 
@@ -474,8 +476,9 @@ let year = oDate.getFullYear();
 let month = oDate.getMonth() + 1;
 let day = oDate.getDate();
 
-let today = String(year) + "-" + String(month) + "-" + String(day);        // 출력: 2025-10-21
-console.log(today);
+console.log(year + "-" + month + "-" + day);    // 출력: 2025-10-21
+console.log(String(year) + "-" + String(month) + "-" + String(day));    // 출력: 2025-10-21
+console.log(${year}-${month}-${day});    // 출력: 2025-10-21
 ```
 </br>
 </br>
