--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -276,6 +276,101 @@ arr2[5] = "반가워요";
 console.log(arr2[5]);         // "반가워요" 출력
 ```
 </br>
+</br>
+
+---
+</br>
+
+### 6. 객체 & 내장객체
+</br>
+
+### < 객체 >
+- 이름(key)과 값(value)으로 이루어진 데이터 묶음
+
+```java
+let obj = {};      // 빈 객체
+let obj = { key: value, key2: value2 };
+```
+
+- obj.name 또는 obj["name"] 두 가지 방식 모두 가능
+```java
+let person = {
+  "name": "홍길동",
+  "age": 25
+};
+
+console.log(person.name);     // "홍길동"
+console.log(person.age);      // 25
+
+console.log(person["name"]);  // "홍길동"
+console.log(person["age"]);   // 25
+
+console.log(person.hi)    // undefined
+person.hi = "Hello";
+console.log(person.hi);    // "Hello"
+```
+- 객체 안에 다양한 자료형 저장 가능
+```java
+let obj = {
+  "name": "이름",
+  "age": 20,
+  "obj2": {},                   // 객체 안의 객체
+  "arr2": [],                   // 객체 안의 배열
+  "sleep": function() {         // 함수(메서드)
+    console.log("잠자기");
+  }
+};
+obj.sleep();                    // "잠자기"
+```
+</br>
+
+### < 내장 객체 >
+- 자바스크립트가 기본으로 제공하는 객체들로, 별도 선언 없이 바로 사용할 수 있음.
+- String (문자열 객체)
+- Number (숫자 객체)
+- Boolean (논리 객체)
+- Array (배열 객체)
+- Date (날짜 객체)
+- Math (수학 관련)
+- Object (모든 객체의 기본 형태)
+</br>
+
+### 원시 타입 vs 객체 타입
+1) 원시 타입
+- String, number, Boolean, null, undefined
+- "문자" → 원시 타입(단순한 값)
+
+2) 객체 타입
+- array [], object {}
+- new String("문자") → 객체 타입(String 객체)
+- 자바스크립트는 원시 타입도 내부적으로 자동으로 객체처럼 감싸서(wrapping) 처리함
+```java
+var str = "문자";
+console.log(str.length);     // 2
+```
+- "문자"가 자동으로 new String("문자")로 감싸져서 .length 사용이 가능
+</br>
+
+### Date 객체 (날짜 / 시간)
+- 날짜와 시간을 다룰 수 있는 자바스크립트 내장 객체
+- String() : 문자열로 변환, Number() : 숫자로 변환
+- 숫자 + 문자열 : 숫자를 문자열로 변환해버림
+- `${}` : 안의 값을 문자열로 변경해 줌
+```java
+let oDate = new Date();
+
+let year = oDate.getFullYear();
+let month = oDate.getMonth() + 1;
+let day = oDate.getDate();
+
+console.log(year + "-" + month + "-" + day);    // 출력: 2025-10-21
+console.log(String(year) + "-" + String(month) + "-" + String(day));    // 출력: 2025-10-21
+console.log(${year}-${month}-${day});    // 출력: 2025-10-21
+```
+</br>
+
+### Array 객체
+</br>
 
 ### < 배열에 원소 추가하기 >
 ### push
@@ -390,96 +485,6 @@ alert(arr.length);         // 출력: 4
 ```
 </br>
 </br>
-
----
-</br>
-
-### 6. 객체 & 내장객체
-</br>
-
-### < 객체 >
-- 이름(key)과 값(value)으로 이루어진 데이터 묶음
-
-```java
-let obj = {};      // 빈 객체
-let obj = { key: value, key2: value2 };
-```
-
-- obj.name 또는 obj["name"] 두 가지 방식 모두 가능
-```java
-let person = {
-  "name": "홍길동",
-  "age": 25
-};
-
-console.log(person.name);     // "홍길동"
-console.log(person.age);      // 25
-
-console.log(person["name"]);  // "홍길동"
-console.log(person["age"]);   // 25
-
-console.log(person.hi)    // undefined
-person.hi = "Hello";
-console.log(person.hi);    // "Hello"
-```
-- 객체 안에 다양한 자료형 저장 가능
-```java
-let obj = {
-  "name": "이름",
-  "age": 20,
-  "obj2": {},                   // 객체 안의 객체
-  "arr2": [],                   // 객체 안의 배열
-  "sleep": function() {         // 함수(메서드)
-    console.log("잠자기");
-  }
-};
-obj.sleep();                    // "잠자기"
-```
-</br>
-
-### < 내장 객체 >
-- 자바스크립트가 기본으로 제공하는 객체들로, 별도 선언 없이 바로 사용할 수 있음.
-- String (문자열 객체)
-- Number (숫자 객체)
-- Boolean (논리 객체)
-- Array (배열 객체)
-- Date (날짜 객체)
-- Math (수학 관련)
-- Object (모든 객체의 기본 형태)
-</br>
-
-### 원시 타입 vs 객체 타입
-1) 원시 타입
-- String, number, Boolean, null, undefined
-- "문자" → 원시 타입(단순한 값)
-
-2) 객체 타입
-- array [], object {}
-- new String("문자") → 객체 타입(String 객체)
-- 자바스크립트는 원시 타입도 내부적으로 자동으로 객체처럼 감싸서(wrapping) 처리함
-```java
-var str = "문자";
-console.log(str.length);     // 2
-```
-- "문자"가 자동으로 new String("문자")로 감싸져서 .length 사용이 가능
-</br>
-
-### Date 객체 (날짜 / 시간)
-- 날짜와 시간을 다룰 수 있는 자바스크립트 내장 객체
-- String() : 문자열로 변환, Number() : 숫자로 변환
-- 숫자 + 문자열 : 숫자를 문자열로 변환해버림
-- `${}` : 안의 값을 문자열로 변경해 줌
-```java
-let oDate = new Date();
-
-let year = oDate.getFullYear();
-let month = oDate.getMonth() + 1;
-let day = oDate.getDate();
-
-console.log(year + "-" + month + "-" + day);    // 출력: 2025-10-21
-console.log(String(year) + "-" + String(month) + "-" + String(day));    // 출력: 2025-10-21
-console.log(${year}-${month}-${day});    // 출력: 2025-10-21
-```
 </br>
 </br>
 
