--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -449,7 +449,7 @@ alert(numbers);                                                      // array, [
 </br>
 </br>
 
-### < join, split, length 함수 >
+### < 그 외 함수(join, split, length) >
 ### join
 - 배열의 원소들을 하나의 문자열로 연결할 때 사용
 - 구분자를 지정해서 각 요소 사이에 넣을 수 있음
@@ -484,6 +484,36 @@ let arr = [5, 6, 7, 8];    // 인덱스: 0 ~ 3
 alert(arr.length);         // 출력: 4
 ```
 </br>
+
+### replace
+- 문자열에서 특정 문자열을 다른 문자열로 바꿀 때 사용
+- 새로운 문자열을 반환, 원본 문자열은 변경되지 않음
+```java
+let str = "Hello World";
+let result = str.replace("World", "이름");      // 출력: "Hello 이름"
+alert(result);       
+```
+</br>
+
+### toUpperCase()
+- 문자열을 모두 대문자로 변환
+- 반환값은 새 문자열 (원본은 변경되지 않음)
+```java
+let str = "hello world";
+let upperStr = str.toUpperCase();    // 출력: "HELLO WORLD"
+alert(upperStr);    
+```
+</br>
+
+### toLowerCase()
+- 문자열을 모두 소문자로 변환
+- 반환값은 새 문자열 (원본은 변경되지 않음)
+```java
+let str = "HELLO WORLD";
+let lowerStr = str.toLowerCase();    // 출력: "hello world"
+alert(lowerStr);    
+```
+
 </br>
 </br>
 </br>
