--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -235,7 +235,7 @@ if(false){
 </br>
 
 ### < 내부적으로 false 값을 갖는 것들 >
-- 0, false, “”(빈 문자열), null, undefined
+- 0, false, “”(빈 문자열), null, undefined, NaN (Not a Number)
 ```java
 if(!''){
     alert('빈 문자열')    // `빈 문자열` 출력
@@ -513,6 +513,32 @@ let str = "HELLO WORLD";
 let lowerStr = str.toLowerCase();    // 출력: "hello world"
 alert(lowerStr);    
 ```
+</br>
+
+### trim()
+- 문자열의 앞뒤에 있는 공백(띄어쓰기, 줄바꿈, 탭 등)을 제거
+- 문자열 중간의 공백은 그대로 유지
+```java
+let str = "   Hello World   ";
+let trimmed = str.trim();
+
+alert(trimmed);   // 출력: "Hello World"
+```
+</br>
+
+### Number 객체
+- String() : 문자열로 변환
+- toString() : 문자열로 변환, 괄호 꼭 써야함
+```java
+let number = 100.56;
+console.log(number);                // 100.56
+console.log(String(number));        // "100.56"
+console.log(number.toString());     // "100.56"
+console.log((3.14).toString());     // "3.14"
+```
+</br>
+
+- 숫자를 문자열로 변환하면서, 소수점 이하 자릿수를 지정
 
 </br>
 </br>
