--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -539,6 +539,27 @@ console.log((3.14).toString());     // "3.14"
 </br>
 
 - 숫자를 문자열로 변환하면서, 소수점 이하 자릿수를 지정
+- 반올림도 자동으로 해줌
+```java
+let num = 3.14159;
+
+console.log(num.toFixed(2));    // "3.14"
+console.log(num.toFixed(0));    // "3"   (소수점 없이 반올림)
+console.log(num.toFixed(4));    // "3.1416"
+```
+</br>
+
+- isNaN() : 인자로 받은 값을 숫자로 변환한 후, 그 값이 NaN이면 true 반환
+- Number.isNaN() : 인자가 엄격하게 NaN인지만 검사 (형 변환 안 함)
+```java
+console.log(0/0);         // NaN
+console.log("안녕"/0);    // NaN
+
+let num = 0/0;
+console.log(isNaN(num));            // true
+console.log(Number.isNaN(num));     // true
+```
+
 
 </br>
 </br>
