--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -352,7 +352,7 @@ console.log(str.length);     // 2
 - "문자"가 자동으로 new String("문자")로 감싸져서 .length 사용이 가능
 </br>
 
-### Date 객체 (날짜 / 시간)
+### 1) Date 객체 (날짜 / 시간)
 - 날짜와 시간을 다룰 수 있는 자바스크립트 내장 객체
 - String() : 문자열로 변환, Number() : 숫자로 변환
 - 숫자 + 문자열 : 숫자를 문자열로 변환해버림
@@ -370,7 +370,7 @@ console.log(${year}-${month}-${day});    // 출력: 2025-10-21
 ```
 </br>
 
-### Array 객체
+### 2) Array 객체
 </br>
 
 ### < 배열에 원소 추가하기 >
@@ -450,7 +450,42 @@ alert(numbers);                                                      // array, [
 </br>
 </br>
 
-### < 그 외 함수(join, split, length) >
+### 3) Number 객체
+- String() : 문자열로 변환
+- toString() : 문자열로 변환, 괄호 꼭 써야함
+```java
+let number = 100.56;
+console.log(number);                // 100.56
+console.log(String(number));        // "100.56"
+console.log(number.toString());     // "100.56"
+console.log((3.14).toString());     // "3.14"
+```
+</br>
+
+- 숫자를 문자열로 변환하면서, 소수점 이하 자릿수를 지정
+- 반올림도 자동으로 해줌
+```java
+let num = 3.14159;
+
+console.log(num.toFixed(2));    // "3.14"
+console.log(num.toFixed(0));    // "3"   (소수점 없이 반올림)
+console.log(num.toFixed(4));    // "3.1416"
+```
+</br>
+
+- isNaN() : 인자로 받은 값을 숫자로 변환한 후, 그 값이 NaN이면 true 반환
+- Number.isNaN() : 인자가 엄격하게 NaN인지만 검사 (형 변환 안 함)
+```java
+console.log(0/0);         // NaN
+console.log("안녕"/0);    // NaN
+
+let num = 0/0;
+console.log(isNaN(num));            // true
+console.log(Number.isNaN(num));     // true
+```
+</br>
+
+### 4) 그 외 함수(join, split, length)
 ### join
 - 배열의 원소들을 하나의 문자열로 연결할 때 사용
 - 구분자를 지정해서 각 요소 사이에 넣을 수 있음
@@ -525,42 +560,6 @@ let trimmed = str.trim();
 
 alert(trimmed);   // 출력: "Hello World"
 ```
-</br>
-
-### Number 객체
-- String() : 문자열로 변환
-- toString() : 문자열로 변환, 괄호 꼭 써야함
-```java
-let number = 100.56;
-console.log(number);                // 100.56
-console.log(String(number));        // "100.56"
-console.log(number.toString());     // "100.56"
-console.log((3.14).toString());     // "3.14"
-```
-</br>
-
-- 숫자를 문자열로 변환하면서, 소수점 이하 자릿수를 지정
-- 반올림도 자동으로 해줌
-```java
-let num = 3.14159;
-
-console.log(num.toFixed(2));    // "3.14"
-console.log(num.toFixed(0));    // "3"   (소수점 없이 반올림)
-console.log(num.toFixed(4));    // "3.1416"
-```
-</br>
-
-- isNaN() : 인자로 받은 값을 숫자로 변환한 후, 그 값이 NaN이면 true 반환
-- Number.isNaN() : 인자가 엄격하게 NaN인지만 검사 (형 변환 안 함)
-```java
-console.log(0/0);         // NaN
-console.log("안녕"/0);    // NaN
-
-let num = 0/0;
-console.log(isNaN(num));            // true
-console.log(Number.isNaN(num));     // true
-```
-
 
 </br>
 </br>
