--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -3,7 +3,7 @@
 - ctrl + / : 전체 주석 처리
 </br>
 
-### 1. 웹 기초 구조 (HTML / CSS / JavaScript)
+# 1. 웹 기초 구조 (HTML / CSS / JavaScript)
 </br>
 
 - HTML : 웹페이지 골격
