--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -45,7 +45,7 @@
 ---
 </br>
 
-### 2. 기본 출력 / 입력 함수
+# 2. 기본 출력 / 입력 함수
 </br>
 
 - 메시지 박스를 띄워 내용을 알림창으로 출력
@@ -95,7 +95,7 @@ console.log(result);
 ---
 </br>
 
-### 3. 변수
+# 3. 변수
 - 변수: 값을 저장하기 위한 메모리 공간의 이름
 </br>
 
@@ -199,7 +199,7 @@ x = 10;             // ❌ 에러 (var/let/const 없이 선언 불가)
 ---
 </br>
 
-### 4. 조건문
+# 4. 조건문
 
 ### < 자료형 >
 ```java
@@ -260,7 +260,7 @@ if(!NaN){
 ---
 </br>
 
-### 5. 배열
+# 5. 배열
 
 - 여러 개의 데이터를 하나의 변수에 저장하기 위한 것
 - 각각의 데이터를 원소라고 함
@@ -281,7 +281,7 @@ console.log(arr2[5]);         // "반가워요" 출력
 ---
 </br>
 
-### 6. 객체 & 내장객체
+# 6. 객체 & 내장객체
 </br>
 
 ### < 객체 >
@@ -568,7 +568,7 @@ alert(trimmed);   // 출력: "Hello World"
 ---
 </br>
 
-### 7. 함수
+# 7. 함수
 </br>
 
 ### 1) 기본 선언형
