--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -571,6 +571,30 @@ alert(trimmed);   // 출력: "Hello World"
 # 7. 함수
 </br>
 
+### 함수
+- function + 함수 이름 + 소괄호
+- 함수는 재사용성이 좋음
+- 유지보수의 용이
+- 코드의 가독성이 좋아짐
+```java
+function 함수명( [인자...[,인자]] ){
+   코드
+   return 반환값
+}
+```
+</br>
+
+```java
+function numbering(){
+    i = 0;
+    while(i < 10){
+        document.write(i);    // 0123456789 출력
+        i += 1;
+    }   
+}
+numbering()
+```
+
 ### 1) 기본 선언형
 - 가장 기본적인 함수 선언 방법
 ```java
