--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -576,11 +576,15 @@ alert(trimmed);   // 출력: "Hello World"
 - 함수는 재사용성이 좋음
 - 유지보수의 용이
 - 코드의 가독성이 좋아짐
+- 매개변수(parameter) : 함수를 정의할 때 함수가 받아들이는 입력값을 의미하는 변수
+- 인자(argument) : 함수로 유입되는 입력 값
 ```java
-function 함수명( [인자...[,인자]] ){
+function 함수명( 매개변수 ){
    코드
-   return 반환값
+   return 반환값;
 }
+
+함수명(인자);
 ```
 </br>
 
