--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -600,6 +600,17 @@ numbering()
 ```
 </br>
 
+- 30, 50 출력
+- return 값은 하나만 가질 수 있음
+```java
+function get_arguments(arg1, arg2){
+    return arg1 + arg2
+}
+ 
+alert(get_arguments(10, 20));
+alert(get_arguments(20, 30));
+```
+
 ### 1) 기본 선언형
 - 가장 기본적인 함수 선언 방법
 ```java
