--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -600,7 +600,6 @@ numbering()
 ```
 </br>
 
-- 30, 50 출력
 - return 값은 하나만 가질 수 있음
 ```java
 function get_arguments(arg1, arg2){
@@ -608,8 +607,20 @@ function get_arguments(arg1, arg2){
 }
  
 alert(get_arguments(10, 20));
-alert(get_arguments(20, 30));
+alert(get_arguments(20, 30));        // 30, 50 출력
 ```
+</br>
+
+- 실습 문제 답
+```java
+function getString(str1, str2, str3) {
+  let string = str1 + str2 + str3
+  return string;
+}
+
+console.log(getString("안녕","하세요","!"));
+```
+</br>
 
 ### 1) 기본 선언형
 - 가장 기본적인 함수 선언 방법
