--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -612,13 +612,15 @@ alert(get_arguments(20, 30));        // 30, 50 출력
 </br>
 
 - 실습 문제 답
+- 매개변수로 3개의 문자열을 받아서 한 줄의 문자열을 반환하는 함수 getString을 작성
 ```java
 function getString(str1, str2, str3) {
   let string = str1 + str2 + str3
-  return string;
+  return String(string);
 }
 
 console.log(getString("안녕","하세요","!"));
+console.log(getString(1,2,3));
 ```
 </br>
 
