--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -637,6 +637,16 @@ function getTotal (a, b) {
 }
 console.log("총 합계: " + getTotal(obj.price, obj.cnt));
 ```
+```java
+function getTotal (a, b) {
+  function getTotalString(total) {
+    console.log("합계는 " + total + "원 입니다.");
+  } 
+  getTotalString(a*b);
+}
+
+getTotal(obj.price, obj.cnt);
+```
 </br>
 
 ### 1) 기본 선언형
