--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -646,6 +646,24 @@ function getTotal (a, b) {
 
 getTotal(obj.price, obj.cnt);
 ```
+```java
+let obj = {
+  "name" : "책상",
+  "price" : 5000,
+  "cnt" : 4
+};
+
+function getTotal (price, cnt) {
+  let result = getTotalString(price*cnt);
+  return result;
+}
+
+function getTotalString(total) {
+  return `합계는 ${total}원 입니다.`;
+} 
+
+console.log(getTotal(obj.price, obj.cnt));
+```
 </br>
 
 ### 1) 기본 선언형
