--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -573,7 +573,9 @@ alert(trimmed);   // 출력: "Hello World"
 
 ### 함수
 - function + 함수 이름 + 소괄호
+- return 뒤에 따라오는 값을 함수의 결과로 반환. 동시에 함수를 종료시킴.
 - return은 필수 아님. 안쓸 경우 undefined를 반환.
+- 매개변수 개수 맞춰야 함. 안넣고싶으면 null이나 undefined.
 - 매개변수(parameter) : 함수를 정의할 때 함수가 받아들이는 입력값을 의미하는 변수
 - 인자(argument) : 함수로 유입되는 입력 값
 ```java
@@ -680,7 +682,7 @@ sayHello();
 - 함수도 변수처럼 저장할 수 있음.
 - 함수 이름이 없을 수도 있어서 익명 함수라고도 부름.
 ```java
-var greet = function() {
+let greet = function() {
   console.log("반가워요!");
 };
 greet(); 
