--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -668,7 +668,7 @@ console.log(getTotal(obj.price, obj.cnt));
 ```
 </br>
 
-### 1) 기본 선언형
+### 1) 함수 선언식
 - 가장 기본적인 함수 선언 방법
 ```java
 function sayHello() {
