--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -671,6 +671,13 @@ console.log(getTotal(obj.price, obj.cnt));
 ### 1) 함수 선언식
 - 가장 기본적인 함수 선언 방법
 ```java
+function 함수이름(매개변수) {
+  // 로직
+}
+
+함수이름(인자);
+```
+```java
 function sayHello() {
   console.log("안녕하세요!");
 }
@@ -682,6 +689,13 @@ sayHello();
 - 함수도 변수처럼 저장할 수 있음.
 - 함수 이름이 없을 수도 있어서 익명 함수라고도 부름.
 ```java
+const 함수이름 = function(매개변수) {
+  // 로직
+};
+
+함수이름(인자);
+```
+```java
 let greet = function() {
   console.log("반가워요!");
 };
@@ -692,6 +706,11 @@ greet();
 ### 3) 즉시 실행 함수
 - 함수를 정의하자마자 바로 실행하는 함수
 ```java
+(function(매개변수) {
+  // 로직
+})(인자);
+```
+```java
 (function() {
   console.log("바로 실행됨!");
 })();
@@ -699,6 +718,13 @@ greet();
 </br>
 
 ### 4) 화살표 함수
+```java
+const 함수이름 = (매개변수) => {
+  // 로직
+};
+
+함수이름(인자);
+```
 ```java
 const hi = () => {
   console.log("Hi!");
