--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -448,6 +448,47 @@ alert(numbers.splice(2, 4, 'three', 'four', 'five', 'six'));         // array, [
 alert(numbers);                                                      // array, [1,2,three,four,five,six,7,8,9,10]
 ```
 </br>
+
+### < 배열에 원소 제거하기 >
+### shift
+- 배열의 첫 번째 원소 제거
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.shift();
+alert(li);
+```
+- b, c, d, e 출력 (한 번에)
+</br>
+
+### pop
+- 배열의 마지막 원소 제거
+```java
+var li = ['a', 'b', 'c', 'd', 'e'];
+li.pop();
+alert(li);
+```
+- a, b, c, d 출력 (한 번에)
+</br>
+
+### < 배열 안 원소 정렬하기 >
+### 정렬
+```java
+var li = ['c', 'e', 'a', 'b', 'd'];
+li.sort();
+alert(li);
+```
+- a, b, c, d, e 출력 (한 번에)
+</br>
+
+### 역순
+```java
+var li = ['c', 'e', 'a', 'b', 'd'];
+li.reverse();
+alert(li);
+```
+- d, b, a, e, c 출력 (한 번에))
+
+</br>
 </br>
 
 ### 3) Number 객체
