--- a/자바스크립트/7. 배열.md
+++ b/자바스크립트/7. 배열.md
@@ -219,7 +219,7 @@ alert(li);
 - 배열의 마지막 원소 제거
 ```java
 var li = ['a', 'b', 'c', 'd', 'e'];
-li.pop();
+console.log(li.pop());    // 출력 : e
 alert(li);
 ```
 - a, b, c, d 출력 (한 번에)
