--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -454,7 +454,7 @@ alert(numbers);                                                      // array, [
 - 배열의 첫 번째 원소 제거
 ```java
 var li = ['a', 'b', 'c', 'd', 'e'];
-li.shift();
+console.log(li.shift());        // 출력: a
 alert(li);
 ```
 - b, c, d, e 출력 (한 번에)
