--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -276,6 +276,16 @@ arr2[5] = "반가워요";
 console.log(arr2[5]);         // "반가워요" 출력
 ```
 </br>
+
+### < 배열 객체 >
+```java
+let person = [
+  {"name" : "홍길동", age : 20 },        // 길이 3
+  {"name" : "박근철", age : 23 },
+  {"name" : "김형동", age : 10 }
+]
+```
+</br>
 </br>
 
 ---
