--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -286,6 +286,33 @@ let person = [
 ]
 ```
 </br>
+
+### filter()
+- 배열에서 조건에 맞는 데이터들을 새로운 배열로 리
+- 원본 배열은 변하지 않음
+```java
+배열.filter(function(요소) {
+  return 조건;
+});
+
+배열.filter(요소 => 조건);
+```
+</br>
+
+- 예제 1: 짝수만 골라내기
+```java
+const numbers = [1, 2, 3, 4, 5, 6];
+const evens = numbers.filter(num => num % 2 === 0);
+console.log(evens);  // 출력 : [2, 4, 6]
+
+const numbers = [1, 2, 3, 4, 5, 6];
+numbers.filter(function(evens) {
+  return num % 2 === 0;
+});
+console.log(evens);  // 출력 : [2, 4, 6]
+```
+
+</br>
 </br>
 
 ---
