--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -199,7 +199,27 @@ x = 10;             // ❌ 에러 (var/let/const 없이 선언 불가)
 ---
 </br>
 
-# 4. 조건문
+# 4. 비교
+- 아래 =는 대입 연산자
+```java
+a=1
+```
+- 비교 연산자의 결과는 true나 false 중의 하나(boolean)
+
+```java
+alert(1==2)             //false
+alert(1==1)             //true
+alert("one"=="two")     //false 
+```
+</br>
+
+</br>
+</br>
+
+---
+</br>
+
+# 5. 조건문
 
 ### < 자료형 >
 ```java
@@ -260,7 +280,7 @@ if(!NaN){
 ---
 </br>
 
-# 5. 배열
+# 6. 배열
 
 - 여러 개의 데이터를 하나의 변수에 저장하기 위한 것
 - 각각의 데이터를 원소라고 함
@@ -318,7 +338,7 @@ console.log(evens);  // 출력 : [2, 4, 6]
 ---
 </br>
 
-# 6. 객체 & 내장객체
+# 7. 객체 & 내장객체
 </br>
 
 ### < 객체 >
@@ -646,7 +666,7 @@ alert(trimmed);   // 출력: "Hello World"
 ---
 </br>
 
-# 7. 함수
+# 8. 함수
 </br>
 
 ### 함수
