--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -213,6 +213,39 @@ alert("one"=="two")     //false
 ```
 </br>
 
+### ==
+- 서로 값이 같다면 true 다르다면 false
+```java
+alert(1==2)             //false
+alert(1==1)             //true
+alert("one"=="two")     //false 
+alert("one"=="one")     //true
+```
+
+### ===
+- 일치 연산자로 값이 정확하게 같을 때 true 다르면 false
+- 서로 같은 수를 표현하고 있더라도 데이터 형이 같은 경우에만 같다고 판단
+```java
+alert(1=='1');              //true
+alert(1==='1');             //false
+```
+- null은 값이 없음을 명시적으로 표시한 것이고, undefined는 값이 정의되어 있지 않은 것
+- NaN은 0/0과 같은 연산의 결과로 만들어지는 특수한 데이터 형 (숫자 x)
+```java
+alert(null == undefined);       //true
+alert(null === undefined);      //false
+alert(true == 1);               //true
+alert(true === 1);              //false
+alert(true == '1');             //true
+alert(true === '1');            //false
+ 
+alert(0 === -0);                //true
+alert(NaN === NaN);             //false
+```
+</br>
+</br>
+
+
 </br>
 </br>
 
