--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -272,6 +272,19 @@ alert(10>=20);      //false
 alert(10>=1);       //true
 alert(10>=10);      //true
 ```
+</br>
+
+### ++a
+- 1 증가시킨 후 연산
+
+### a++
+- 연산 후 1 증가
+
+### --a
+- 1 감소시킨 후 연산
+
+### a--
+- 연산 후 1 감소
 
 </br>
 </br>
