--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -285,6 +285,18 @@ alert(10>=10);      //true
 
 ### a--
 - 연산 후 1 감소
+</br>
+
+### typeof
+```java
+alert(typeof "1")
+```
+- 문자이므로 string 출력
+
+```java
+alert(typeof 1)
+```
+- 숫자이므로 number 출력
 
 </br>
 </br>
@@ -399,10 +411,23 @@ const evens = numbers.filter(num => num % 2 === 0);
 console.log(evens);  // 출력 : [2, 4, 6]
 
 const numbers = [1, 2, 3, 4, 5, 6];
-numbers.filter(function(evens) {
+const evens = numbers.filter(function(num) {
   return num % 2 === 0;
 });
 console.log(evens);  // 출력 : [2, 4, 6]
+```
+
+- 예제 2: 이름이 2글자인 사람만
+```java
+const names = ["영희", "철수", "꽃", "민준", "유"];
+const result = names.filter(name => name.length === 2);
+console.log(result);  // ["철수", "지우", "민준"]
+
+const names = ["영희", "철수", "꽃", "민준", "유"];
+const result = names.filter(function(name) {
+  return name.length === 2;
+});
+console.log(result);  // ["철수", "지우", "민준"]
 ```
 
 </br>
