--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -340,6 +340,37 @@ if(false){
 ```
 </br>
 
+### < switch 문 >
+- 하나의 변수 값을 여러 case로 나눔
+- case에는 break 꼭 필요 (없으면 아래 case까지 계속 실행됨)
+```java
+switch (변수) {
+  case 값1:
+    // 실행할 코드
+    break;
+  case 값2:
+    // 실행할 코드
+    break;
+  default:
+    // 위에 해당하는 case가 없을 때 실행
+}
+```
+```java
+let day = 2;
+
+switch (day) {
+  case 1:
+    console.log("월요일");
+    break;
+  case 2:
+    console.log("화요일");
+    break;
+  default:
+    console.log("그 외 요일");
+}
+```
+</br>
+
 ### < 내부적으로 false 값을 갖는 것들 >
 - 0, false, “”(빈 문자열), null, undefined, NaN (Not a Number)
 ```java
