--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -369,6 +369,18 @@ switch (day) {
     console.log("그 외 요일");
 }
 ```
+
+- 여러 개의 case 사용 가능
+```java
+let day = 2;
+
+switch (day) {
+  case 1: case 2:   // 1이나 2일 때 만족 ( || )
+    console.log("월요일");
+  default:
+    console.log("그 외 요일");
+}
+```
 </br>
 
 ### < 내부적으로 false 값을 갖는 것들 >
@@ -397,7 +409,33 @@ if(!NaN){
 ---
 </br>
 
-# 6. 배열
+# 6. 반복문
+### 1) while
+```java
+while (조건){
+    반복해서 실행할 코드
+}
+```
+```java
+var i = 0;                                        // 종료조건으로 i의 값이 10보다 작다면 true, 같거나 크다면 false가 된다.
+while(i < 10){
+    document.write('coding everybody <br />');    // 반복이 실행될 때마다 coding everybody <br />이 출력된다. <br /> 줄바꿈을 의미하는 HTML 태그
+    i++                                           // i의 값이 1씩 증가한다.
+}
+```
+- coding everybody이 10번 출력
+</br>
+
+### 2) do-while
+### 3) for
+### 4) for in
+</br>
+</br>
+
+---
+</br>
+
+# 7. 배열
 
 - 여러 개의 데이터를 하나의 변수에 저장하기 위한 것
 - 각각의 데이터를 원소라고 함
@@ -468,7 +506,7 @@ console.log(result);  // ["철수", "지우", "민준"]
 ---
 </br>
 
-# 7. 객체 & 내장객체
+# 8. 객체 & 내장객체
 </br>
 
 ### < 객체 >
@@ -796,7 +834,7 @@ alert(trimmed);   // 출력: "Hello World"
 ---
 </br>
 
-# 8. 함수
+# 9. 함수
 </br>
 
 ### 함수
