--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -411,6 +411,7 @@ if(!NaN){
 
 # 6. 반복문
 ### 1) while
+- 조건을 먼저 검사하고, 참이면 실행
 ```java
 while (조건){
     반복해서 실행할 코드
@@ -427,8 +428,55 @@ while(i < 10){
 </br>
 
 ### 2) do-while
+- 조건을 나중에 검사하고, 참이면 실행
+```java
+do {
+  // 반복할 코드
+} while (조건);
+```
+```java
+let i = 1;
+
+do {
+  console.log(i);    // 출력: 1 2 3
+  i++;
+} while (i <= 3);
+```
+</br>
+
 ### 3) for
+- 반복할 횟수가 정해져 있을 때 쓰는 반복문
+```java
+for(초기화; 반복조건; 반복이 될 때마다 실행되는 코드){
+    반복해서 실행될 코드
+}
+```
+```java
+for(var i = 0; i < 10; i++){
+    document.write('coding everybody'+i+'<br />');        // 'coding everybody + i 가 10번 출력
+}
+```
+
 ### 4) for in
+- 객체의 속성(key) 또는 배열의 인덱스를 하나씩 꺼낼 때 사용하는 반복문
+```java
+for (let 변수 in 객체) {
+  // 변수는 key (속성 이름)
+}
+```
+```java
+const user = {
+  name: "민수",
+  age: 20,
+  city: "Seoul"
+};
+
+for (let key in user) {
+  console.log(key);             // 속성 이름 출력
+  console.log(user[key]);       // 해당 값 출력
+}
+- name 민수 age 20 city Seoul 출력
+```
 </br>
 </br>
 
