--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -377,6 +377,7 @@ let day = 2;
 switch (day) {
   case 1: case 2:   // 1이나 2일 때 만족 ( || )
     console.log("월요일");
+    break;
   default:
     console.log("그 외 요일");
 }
