--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -467,18 +467,24 @@ for (let 변수 in 객체) {
 }
 ```
 ```java
-const user = {
-  name: "민수",
-  age: 20,
-  city: "Seoul"
-};
-
-for (let key in user) {
-  console.log(key);             // 속성 이름 출력
-  console.log(user[key]);       // 해당 값 출력
+var grades = {'egoing': 10, 'k8805': 6, 'sorialgi': 80};
+for(key in grades) {
+    document.write("key : "+key+" value : "+grades[key]+"<br />");
 }
 ```
-- name 민수 age 20 city Seoul 출력
+- 출력
+```
+key :   egoing value : 10
+key :   k8805 value : 6
+key :   sorialgi value : 80
+```
+```java
+var arr = ['a', 'b', 'c'];
+for(var name in arr) {
+    document.write(name);
+}
+```
+012 출력 (배열에도 적용 가능)
 
 </br>
 </br>
