--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -466,6 +466,8 @@ for (let 변수 in 객체) {
   // 변수는 key (속성 이름)
 }
 ```
+</br>
+
 ```java
 var grades = {'egoing': 10, 'k8805': 6, 'sorialgi': 80};
 for(key in grades) {
@@ -478,13 +480,15 @@ key :   egoing value : 10
 key :   k8805 value : 6
 key :   sorialgi value : 80
 ```
+</br>
+
 ```java
 var arr = ['a', 'b', 'c'];
 for(var name in arr) {
     document.write(name);
 }
 ```
-012 출력 (배열에도 적용 가능)
+- 012 출력 (배열에도 적용 가능)
 
 </br>
 </br>
