--- a/HTML_Javascript/10.21_11.20.md
+++ b/HTML_Javascript/10.21_11.20.md
@@ -524,7 +524,7 @@ let person = [
 </br>
 
 ### filter()
-- 배열에서 조건에 맞는 데이터들을 새로운 배열로 리
+- 배열에서 조건에 맞는 데이터들을 새로운 배열로 리턴
 - 원본 배열은 변하지 않음
 ```java
 배열.filter(function(요소) {
