--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -3,11 +3,13 @@
 - Fiori :  SAP 디자인 가이드라인
 - Fiori Launchpad : SAP program/UI5. 다양한 환경에서 업무처리가 가능한 대시보드.
 - UI5 : SAP가 권장하는 최적의 UI Application을 만들 수 있는 Javascript 프레임워크 (내부가 Js로 이루어져 있음)
+* 참고 사이트 : UI5 SDK 사이트, SAP BTP Trial 사이트
 </br>
 
 ### Model, Controller, View 구조 (MVC 패턴)
 - UI5는 세 가지 구조로 나뉨.
+- UI5는 다양한 브라우저에서 지원.
 - View : 화면 담당 (UI)
 - Controller : 기능 담당
-- Model : 데이터 (JSON, oData)
+- Model : 데이터 담당. 데이터의 CRUD 처리. (JSON, oData)
 
