--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -4,7 +4,7 @@
 - Fiori Launchpad : SAP program/UI5. 다양한 환경에서 업무처리가 가능한 대시보드.
 - UI5 : SAP가 권장하는 최적의 UI Application을 만들 수 있는 Javascript 프레임워크 (내부가 Js로 이루어져 있음)
 
-* 참고 사이트 : UI5 SDK 사이트, SAP BTP Trial 사이트 *
+* 참고 사이트 : UI5 SDK 사이트, SAP BTP Trial 사이트
 </br>
 
 ### Model, Controller, View 구조 (MVC 패턴)
