--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -5,6 +5,7 @@
 - UI5 : SAP가 권장하는 최적의 UI Application을 만들 수 있는 Javascript 프레임워크 (내부가 Js로 이루어져 있음)
 
 * 참고 사이트 : UI5 SDK 사이트, SAP BTP Trial 사이트
+* https://<host>:<port>/sap/public/bc/ui5_ui5/index.html
 </br>
 
 ### Model, Controller, View 구조 (MVC 패턴)
@@ -13,4 +14,13 @@
 - View : 화면 담당 (UI)
 - Controller : 기능 담당
 - Model : 데이터 담당. 데이터의 CRUD 처리. (JSON, oData)
+</br>
 
+### SAP에서 주로 사용되는 라이브러
+- sap.ui.comp
+- sap.ui.table
+- sap.ui.layout
+- sap.ui.core
+
+- SAP Business Application Studio (BAS)
+- Visual Studio Code
