--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -16,11 +16,10 @@
 - Model : 데이터 담당. 데이터의 CRUD 처리. (JSON, oData)
 </br>
 
-### SAP에서 주로 사용되는 라이브러
+### SAP에서 주로 사용되는 라이브러리
 - sap.ui.comp
 - sap.ui.table
 - sap.ui.layout
 - sap.ui.core
-
 - SAP Business Application Studio (BAS)
 - Visual Studio Code
