--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -25,3 +25,11 @@
   
 - SAP Business Application Studio (BAS)
 - Visual Studio Code
+</br>
+
+```
+터미널
+cd 프로젝트명    // 경로 맞추기
+프로젝트명> npm install  // 설치 완료되면 node_modules
+프로젝트명> npm run satrt
+```
