--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -27,9 +27,9 @@
 - Visual Studio Code
 </br>
 
-```
+```fiori
 터미널
 cd 프로젝트명    // 경로 맞추기
-프로젝트명> npm install  // 설치 완료되면 node_modules
+프로젝트명> npm install  // 설치 완료되면 node_modules 폴더가 생김
 프로젝트명> npm run satrt
 ```
