--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -27,9 +27,26 @@
 - Visual Studio Code
 </br>
 
-```fiori
+```bash
 터미널
 cd 프로젝트명    // 경로 맞추기
-프로젝트명> npm install  // 설치 완료되면 node_modules 폴더가 생김
+cd ..            // 뒤로가기
+프로젝트명> npm install    // 설치 완료되면 node_modules 폴더가 생김
 프로젝트명> npm run satrt
+```
+
+- SAP UI5 프레임워크의 핵심(JavaScript) 라이브러리를 불러오는 코드
+```html
+<script
+        id="sap-ui-bootstrap"
+        src="resources/sap-ui-core.js"
+        data-sap-ui-theme="sap_horizon"
+        data-sap-ui-resource-roots='{
+            "sap.ui5.yui5project01": "./"    // NameSpace.project명
+        }'
+        data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
+        data-sap-ui-compat-version="edge"
+        data-sap-ui-async="true"
+        data-sap-ui-frame-options="trusted"
+    ></script>
 ```
