--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -27,6 +27,7 @@
 - Visual Studio Code
 </br>
 
+- 터미널 실행절차
 ```bash
 터미널
 cd 프로젝트명    // 경로 맞추기
@@ -34,6 +35,7 @@ cd ..            // 뒤로가기
 프로젝트명> npm install    // 설치 완료되면 node_modules 폴더가 생김
 프로젝트명> npm run satrt
 ```
+</br>
 
 - SAP UI5 프레임워크의 핵심(JavaScript) 라이브러리를 불러오는 코드
 ```html
