--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -44,7 +44,7 @@ cd ..            // 뒤로가기
         src="resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resource-roots='{
-            "sap.ui5.yui5project01": "./"    // NameSpace.project명
+            "sap.ui5.yui5project01": "./"    // NameSpace.project 이름, ./ : 현재위치
         }'
         data-sap-ui-on-init="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compat-version="edge"
