--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -52,3 +52,6 @@ cd ..            // 뒤로가기
         data-sap-ui-frame-options="trusted"
     ></script>
 ```
+</br>
+
+- Component.js, index.html, manifest.json은 설정 파일
