--- a/HTML_Javascript/10.23.md
+++ b/HTML_Javascript/10.23.md
@@ -54,4 +54,5 @@ cd ..            // 뒤로가기
 ```
 </br>
 
-- Component.js, index.html, manifest.json은 설정 파일
+- Component.js, index.html, manifest.json은 설정 파일 (프로젝트 구동 시 필요한 파일들. App 초기 설정을 담당.)
+- SAPUI5 실행 순서 : index.html -> Component.js -> manifest.json
