Update 웹 UI 프레임워크 활용한 개발 1-1.md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -9,8 +9,7 @@
 </br>
 
 ### Model, Controller, View 구조 (MVC 패턴)
-- UI5는 세 가지 구조로 나뉨.
-- UI5는 다양한 브라우저에서 지원.
+- UI5는 세 가지 구조로 나뉨. UI5는 다양한 브라우저에서 지원.
 - View : 화면 담당 (UI)
 - Controller : 기능 담당
 - Model : 데이터 담당. 데이터의 CRUD 처리. (JSON, oData)
