Update 웹 UI 프레임워크 활용한 개발 1-1.md

--- a/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
+++ b/HTML_Javascript/웹 UI 프레임워크 활용한 개발 1-1.md
@@ -4,7 +4,7 @@
 - Fiori Launchpad : SAP program/UI5. 다양한 환경에서 업무처리가 가능한 대시보드.
 - UI5 : SAP가 권장하는 최적의 UI Application을 만들 수 있는 Javascript 프레임워크 (내부가 Js로 이루어져 있음)
 
-* 참고 사이트 : UI5 SDK 사이트, SAP BTP Trial 사이트
+* 참고 사이트 : UI5 SDK 사이트(UI5 API 사이트), SAP BTP Trial 사이트
 * https://<host>:<port>/sap/public/bc/ui5_ui5/index.html
 </br>
 
@@ -54,4 +54,17 @@ cd ..            // 뒤로가기
 </br>
 
 - Component.js, index.html, manifest.json은 설정 파일 (프로젝트 구동 시 필요한 파일들. App 초기 설정을 담당.)
-- SAPUI5 실행 순서 : index.html -> Component.js -> manifest.json
+- SAPUI5 실행 순서 : index.html -> Component.js -> manifest.json -> App.view.xml (rootview에 의해) -> App.controller.js (controllername에 의해)
+- view.xml, controller.js : 확장자(확장자는 전부 소문자)
+</br>
+
+- ns : namespace
+```html
+<mvc:View controllerName="sap.ui5.yui5project01.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"  // :mvc => 별칭. 다른 namespace를 추가하고 싶을 때 사용.
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+    </Page>
+</mvc:View>
+```
+
